--- a/less/layout.less
+++ b/less/layout.less
@@ -37,8 +37,9 @@ form button.btn{
     background: @secondary-color;
     color: white;
 }
-#headingOne, #headingTwo, #headingThree h5{
+#headingOne h5, #headingTwo h5, #headingThree h5{
     background: none;
+    .box-shadow(none);    
 
     button {
     background:none;
